Fix menu to fit into one line on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -136,7 +136,6 @@ footer {
   height: 32px;
   display: inline-block;
   vertical-align: middle;
-  margin-right: 0.5rem;
 }
 
 .github svg {
